Template/css/style.css
/* box reset */
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

/*
 *
 * Global styles
 *
 */

html {
  background: #F1F6F5; /* fallback background color */
  color: #2d2b2b; /* default text color */
  font-size: 125%; /* 1 rem = 20px */
  line-height: 1.5em;
  font-family: 'Lora', serif;
  -webkit-font-smoothing: antialiased; /* font antialiasing in webkit */
  margin: 0;
}

/* TODO: Move background images to separate layer */

body {
  background: fixed url('../img/webtek_paella.jpeg') no-repeat;
  background-size: cover;
  margin: 0;
}

/* Typography & color */
h1, h2, h3, h4 {
  font-family: 'Lato', sans-serif;
  text-transform: uppercase;
  letter-spacing: .11em;
}

h2 {
  font-size: 3.2rem;
}

h3 {
  font-size: 1.8rem;
}

a {
  color: #3cc;
  text-decoration: none;
  border-bottom: 6px solid rgba(51,204,204,0.2);
  font-family: 'Lato', sans-serif;
  transition: .2s color, .2s border-color;
}

a:hover, a:focus {
  color: #099;
  outline: none;
  border-bottom-color: rgba(51,204,204,0.5);
}

a:active {
  color: #c33;
  border-bottom-color: rgba(204,51,51,0.5);
}

/* link styles for large buttons */
a.button {
  display: inline-block;
  height: 4rem;
  padding: 0 2rem;
  border: 0;
  font-family: 'Lato', sans-serif;
  font-weight: bold;
  line-height: 4rem;
  font-size: 1rem;
  color: white;
  background: #2d2b2b;
  transition: .1s background;
}

a.button:hover, a.button:focus {
  background: #3cc;
}

a.button:active {
  background: #248f8f
}

a.button::before {
  content: '» ';
}

/* link styles for large buttons inside boxes */
.box a.button {
  background: white;
  color: #2d2b2b;
}

.box a.button:hover, .box a.button:focus {
  background: #3cc;
  color: #fff;
}

.box a.button:active{
  background: #248f8f;
}

.blue a.button:hover, .blue a.button:focus {
  background: #2d2b2b;
  color: #fff;
}

.blue a.button:active{
  background: #000;
}

/* white banners */
.intro,
.cta {
  background: white;
  font-size: 1.1rem;
  line-height: 2rem;
}

/* todo: default link styles in boxes */

/* box styles */
.box {
  background: #3d3d3d;
  color: #fff;
}

.dark {
  background: #000;
  /* TODO: Add texture */
}

.blue {
  background: #3cc;
  /* TODO: Add texture */
}

/* footer styles */
footer {
  background: #222;
  color: #fff;
  padding: 4rem 0;
}

/*
 *
 * Mobile layout
 *
 */

header {
 height: 70vh;
}

header > h1 {
 margin: 0
}

#main-nav {
 position: fixed;
 z-index: 1;
 width: 100%;
 height: 100%;
 top: 0;
 right: -100%;
 background: #fff;
 transition: .2s right;
}

#main-nav.toggled {
  right: 0;
}

#main-nav ul {
  text-align: center;
  list-style: none;
  margin: 0;
  padding: 20vh 0 0;
}

#main-nav a {
  display: inline-block;
  text-transform: uppercase;
  font-weight: bold;
  color: #2b2d2d;
  border-bottom: 0;
  height: 3rem;
  padding: 0 2rem;
  line-height: 3rem;
  letter-spacing: .05em;
  transition: .2s color;
}

#main-nav a::after {
  content: '';
  display: block;
  height: 6px;
  background: #3cc;
  margin: -.5em auto 0;
  width: 0;
  transition: .2s width;
}

#main-nav a:hover,
#main-nav a:active,
#main-nav a.active, /* active page class */
#main-nav a:focus {
  color: #3cc;
}

#main-nav a:hover::after,
#main-nav a:active::after,
#main-nav a.active::after, /* active page class */
#main-nav a:focus::after {
  width: 100%;
}

#main-nav-toggler {
  width: 2rem;
  height: 2rem;
  background: #fff;
  position: fixed;
  z-index: 2;
  top: 1rem;
  right: 1rem;
  border-radius: 100%;
  box-shadow: 0 0 10px 0 rgba(0,0,0,0.1);
  cursor: pointer;
}

#main-nav-toggler span {
  background: #2b2d2d;
  width: 40%;
  height: 2px;
  margin: 3px auto;
  display: block;
  position: relative;
  transition: .2s transform;
}

#main-nav-toggler span:first-of-type {
  margin-top: 15px;
}

#main-nav-toggler.active span {
  visibility: hidden;
}

#main-nav-toggler.active span:first-of-type {
  visibility: visible;
  transform: rotate(45deg);
  top: 5px;
  left: 1px;
}

#main-nav-toggler.active span:last-of-type {
  visibility: visible;
  transform: rotate(-45deg);
  bottom: 5px;
  left: 1px;
}

 .intro,
 .cta,
 .box,
 footer {
   padding: 2rem;
 }

 figure {
   width: 100%;
   margin: 0;
 }

 figure img {
   width: 100%;
   vertical-align: middle; /* remove trailing space */
 }

/*
 *
 * layout for screens wider than 960 px
 *
 */

@media screen and (min-width: 960px) {

  /* Header layout */
  header {
    position: relative;
  }

  #logo {
    width: 515px;
    height: 145px;
    position: absolute;
    top: calc(50% - 2.5rem); /* remove half the menu height */
    left: 50%;
    margin-left: calc(-515px / 2);
    margin-top: calc(-145px / 2);
    text-indent: -9999px;
    overflow: hidden;
    background: url('../img/dacarlo_logo@2x.png') no-repeat;
    background-size: contain;
  }

  #main-nav {
    position: absolute;
    width: 100%;
    height: auto;
    background: white;
    bottom: 0;
    right: auto;
    top: auto;
    box-shadow: 0 0 0 0 rgba(0,0,0,0);
    transition: .2s box-shadow;
  }

  #main-nav.sticky {
    position: fixed;
    bottom: auto;
    top: 0;
    z-index: 1;
    box-shadow: 0 0 10px 0 rgba(0,0,0,0.1);
  }

  #main-nav ul {
    padding: 0;
  }

  #main-nav li {
    display: inline-block;
    float: none
  }

  #main-nav a {
    height: 5rem;
    padding: 0 2rem;
    line-height: 5rem;
  }

  #main-nav a::after {
    margin-top: -1.5em;
  }

  #main-nav-toggler {
    display: none;
  }


  /* section layout and style
   *
   */

   /* clearfix hack */
  .row::before,
  .row::after {
    display: table;
    content: " ";
    clear: both;
  }

  .container {
    width: 960px;
    margin: 0 auto;
    position: relative;
  }

  .intro > .container,
  .cta > .container {
    width: calc(960px - 8rem);
  }

  .intro {
    padding: 8rem 0;
    margin-bottom: 4rem;
  }

  main {
    margin-bottom: 4rem;
  }

  .cta {
    padding: 4rem 0;
    margin-bottom: 4rem;
  }

  /* box layout classes */
  .box {
    width: calc(7 * 4rem);
    float: left;
    padding: 0;
    margin: 0;
  }

  .right {
    float: right;
  }

  /* TODO: maa ha float for aa kunne ha negativ margin */
  .full {
    width: calc(10 * 4rem);
    margin-left: 4rem;
  }

  .center {
    width: calc(8 * 4rem);
    margin-left: calc(2 * 4rem);
  }

  .box > .text-wrapper {
    padding: 8rem 4rem;
  }

  .tight > .text-wrapper {
    padding: 4rem;
  }

  /* image position */
  .left + figure,
  .right + figure {
    width: calc(5 * 4rem);
    height: calc(5 * 4rem);
    position: absolute;
    right: 0;
    top: calc(2 * 4rem);
    overflow: hidden;
    margin: 0;
  }

  .right + figure {
    right: auto;
    left: 0;
  }

  figure img {
    width: 100%;
  }

  /* footer */
  footer {
    padding: 8rem 0;
  }
}

